Added French Language

--- a/E-commerce-ASP/Views/Home/About.cshtml
+++ b/E-commerce-ASP/Views/Home/About.cshtml
@@ -9,8 +9,8 @@
             <div class="col-12">
                 <div class="bread-inner">
                     <ul class="bread-list">
-                        <li><a href="index1.html">Home<i class="ti-arrow-right"></i></a></li>
-                        <li class="active"><a href="blog-single.html">About Us</a></li>
+                        <li><a href="index1.html">@E_commerce_ASP.Resources.Views.Home.About.Home<i class="ti-arrow-right"></i></a></li>
+                        <li class="active"><a href="blog-single.html">@E_commerce_ASP.Resources.Views.Home.About.AboutUs</a></li>
                     </ul>
                 </div>
             </div>
@@ -26,8 +26,8 @@
                 <div class="col-lg-8 col-12">
                     <div class="form-main">
                         <div class="title">
-                            <h4>About Us</h4>
-                            <h3>Here you can find information about our Site</h3>
+                            <h4>@E_commerce_ASP.Resources.Views.Home.About.AboutUs</h4>
+                            <h3>@E_commerce_ASP.Resources.Views.Home.About.HereYouCanFindInfoAboutOurSite</h3>
                         </div>
 
                         <h6>Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée à titre provisoire pour calibrer une mise en page, le texte définitif venant remplacer le faux-texte dès qu'il est prêt ou que la mise en page est achevée. Généralement, on utilise un texte en faux latin, le Lorem ipsum ou Lipsum.</h6>
@@ -39,7 +39,7 @@
                     <div class="single-head">
                         <div class="single-info">
                             <i class="fa fa-phone"></i>
-                            <h4 class="title">Call us Now:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.CallusNow:</h4>
                             <ul>
                                 <li>+212 0608129323</li>
                                 <li>+212 0632493393</li>
@@ -55,7 +55,7 @@
                         </div>
                         <div class="single-info">
                             <i class="fa fa-location-arrow"></i>
-                            <h4 class="title">Our Address:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.OurAddress:</h4>
                             <ul>
                                 <li>Route Sefrou Fes</li>
                                 <li>Kingdom of Morocco</li>
