--- a/E-commerce-ASP/Views/Home/Contact.cshtml
+++ b/E-commerce-ASP/Views/Home/Contact.cshtml
@@ -74,25 +74,26 @@
                     <div class="single-head">
                         <div class="single-info">
                             <i class="fa fa-phone"></i>
-                            <h4 class="title">Call us Now:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.CallusNow:</h4>
                             <ul>
-                                <li>+123 456-789-1120</li>
-                                <li>+522 672-452-1120</li>
+                                <li>+212 0608129323</li>
+                                <li>+212 0632493393</li>
                             </ul>
                         </div>
                         <div class="single-info">
                             <i class="fa fa-envelope-open"></i>
                             <h4 class="title">Email:</h4>
                             <ul>
-                                <li><a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></li>
-                                <li><a href="mailto:info@yourwebsite.com">support@yourwebsite.com</a></li>
+                                <li><a href="mailto:info@yourwebsite.com">Info@ensaf.com</a></li>
+                                <li><a href="mailto:info@yourwebsite.com">support@ensaf.com</a></li>
                             </ul>
                         </div>
                         <div class="single-info">
                             <i class="fa fa-location-arrow"></i>
-                            <h4 class="title">Our Address:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.OurAddress:</h4>
                             <ul>
-                                <li>KA-62/1, Travel Agency, 45 Grand Central Terminal, New York.</li>
+                                <li>Route Sefrou Fes</li>
+                                <li>Kingdom of Morocco</li>
                             </ul>
                         </div>
                     </div>
