--- a/E-commerce-ASP/Views/Home/Statistique.cshtml
+++ b/E-commerce-ASP/Views/Home/Statistique.cshtml
@@ -11,8 +11,8 @@
             <div class="col-12">
                 <div class="bread-inner">
                     <ul class="bread-list">
-                        <li><a href="index1.html">Home<i class="ti-arrow-right"></i></a></li>
-                        <li class="active"><a href="blog-single.html">Statistics</a></li>
+                        <li><a href="index1.html">@E_commerce_ASP.Resources.Views.Home.Statistique.Home<i class="ti-arrow-right"></i></a></li>
+                        <li class="active"><a href="blog-single.html">@E_commerce_ASP.Resources.Views.Home.Statistique.Statistics</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,19 +28,19 @@
                 <div class="col-lg-8 col-12">
                     <div class="form-main">
                         <div class="title">
-                            <h4>Statistics</h4>
-                            <h3>Here you can find Statitstics about our site</h3>
+                            <h4>@E_commerce_ASP.Resources.Views.Home.Statistique.Statistics</h4>
+                            <h3>@E_commerce_ASP.Resources.Views.Home.Statistique.HereYouCanFindInfoAboutOurSite</h3>
                         </div>
 
-                        <div><h6>Number of Registered Users :</h6>@ViewData["nb_Users"]</div>
+                        <div><h6>@E_commerce_ASP.Resources.Views.Home.Statistique.NumberOfRegisteredUsers</h6>@ViewData["nb_Users"]</div>
                         <hr />
-                        <div><h6>Number of Listed Products :</h6>@ViewData["nb_Products"]</div>
+                        <div><h6>@E_commerce_ASP.Resources.Views.Home.Statistique.NumberOfListedProducts</h6>@ViewData["nb_Products"]</div>
                         <hr />
-                        <div><h6>Number of Companies Registered on our Site :</h6>@ViewData["nb_Companies"]</div>
+                        <div><h6>@E_commerce_ASP.Resources.Views.Home.Statistique.NumberOfRegisteredCompanies</h6>@ViewData["nb_Companies"]</div>
                         <hr />
-                        <div><h6>Number of Particualrs Registered on our Site :</h6>@ViewData["nb_Particulars"]</div>
+                        <div><h6>@E_commerce_ASP.Resources.Views.Home.Statistique.NumberOfParticularsOntheSite</h6>@ViewData["nb_Particulars"]</div>
                         <hr />
-                        <div> <h6>Categories Which our Site Contains :</h6>@ViewData["nb_Categories"]</div>
+                        <div> <h6>@E_commerce_ASP.Resources.Views.Home.Statistique.CategoriesWhichOurSiteContains</h6>@ViewData["nb_Categories"]</div>
                         <br />
                         <!--<div><h6>Graph Showing the ownership of Products per User</h6><img src="@Url.Action("Chart")" /></div>-->
 
@@ -51,7 +51,7 @@
                     <div class="single-head">
                         <div class="single-info">
                             <i class="fa fa-phone"></i>
-                            <h4 class="title">Call us Now:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.CallusNow:</h4>
                             <ul>
                                 <li>+212 0608129323</li>
                                 <li>+212 0632493393</li>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="single-info">
                             <i class="fa fa-location-arrow"></i>
-                            <h4 class="title">Our Address:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.OurAddress:</h4>
                             <ul>
                                 <li>Route Sefrou Fes</li>
                                 <li>Kingdom of Morocco</li>
