--- a/E-commerce-ASP/Views/Proprietaire/Settings.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/Settings.cshtml
@@ -11,7 +11,7 @@
                 <div class="col-lg-8 col-12">
                     <div class="form-main">
                         <div class="title">
-                            <h3>Settings</h3>
+                            <h3>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Settings</h3>
                         </div>
                         @if (Model.Nature == "Particular")
                         {
@@ -65,7 +65,7 @@
 
                                     <div class="col-12">
                                         <div class="form-group button">
-                                            <button type="submit" class="btn ">Update Now</button>
+                                            <button type="submit" class="btn ">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.UpdateNow</button>
                                         </div>
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
 
                                     <div class="col-12">
                                         <div class="form-group button">
-                                            <button type="submit" class="btn ">Update now</button>
+                                            <button type="submit" class="btn ">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.UpdateNow</button>
                                         </div>
                                     </div>
                                 </div>
@@ -146,7 +146,7 @@
                     <div class="single-head">
                         <div class="single-info">
                             <i class="fa fa-phone"></i>
-                            <h4 class="title">Call us Now:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.CallusNow:</h4>
                             <ul>
                                 <li>+212 0608129323</li>
                                 <li>+212 0632493393</li>
@@ -162,7 +162,7 @@
                         </div>
                         <div class="single-info">
                             <i class="fa fa-location-arrow"></i>
-                            <h4 class="title">Our Address:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.OurAddress:</h4>
                             <ul>
                                 <li>Route Sefrou Fes</li>
                                 <li>Kingdom of Morocco</li>
@@ -174,4 +174,5 @@
         </div>
     </div>
 </section>
+
 
