--- a/E-commerce-ASP/Views/Proprietaire/AddProduct.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/AddProduct.cshtml
@@ -11,8 +11,8 @@
             <div class="col-12">
                 <div class="bread-inner">
                     <ul class="bread-list">
-                        <li><a href="index1.html">Home<i class="ti-arrow-right"></i></a></li>
-                        <li class="active"><a href="blog-single.html">Add Product</a></li>
+                        <li><a href="index1.html">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Home<i class="ti-arrow-right"></i></a></li>
+                        <li class="active"><a href="blog-single.html">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.AddProduct</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,8 +28,8 @@
                 <div class="col-lg-8 col-12">
                     <div class="form-main">
                         <div class="title">
-                            <h4>Add Product</h4>
-                            <h3>Specify your product details please</h3>
+                            <h4>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.AddProduct</h4>
+                            <h3>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.SpecifyYourProductDetails</h3>
                         </div>
                         @using (Html.BeginForm("AddProduct", "Proprietaire", FormMethod.Post,
                             new { enctype = "multipart/form-data" }))
@@ -38,51 +38,51 @@
 
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                    <div class="row">
-                        <div class="col-lg-6 col-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Name, new { @class = "control-label" })
-                                @Html.TextBoxFor(m => m.Name)
-                                @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Price, new { @class = "control-label" })
-                                @Html.TextBoxFor(m => m.Price)
-                                @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Category, new { @class = "control-label" })
-                                <br />
-                                @Html.DropDownListFor(m => m.CategoryId, ViewBag.CategoryList as SelectList, "Selectioner Category", new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-12">
-                            <div class="form-group">
-                                <label>Choisissez une Image<span></span></label>
-                                <input type="file" name="upload">
-                            </div>
-                        </div>
+                            <div class="row">
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.Name, new { @class = "control-label" })
+                                        @Html.TextBoxFor(m => m.Name)
+                                        @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.Price, new { @class = "control-label" })
+                                        @Html.TextBoxFor(m => m.Price)
+                                        @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.Category, new { @class = "control-label" })
+                                        <br />
+                                        @Html.DropDownListFor(m => m.CategoryId, ViewBag.CategoryList as SelectList, "Selectioner Category", new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        <label>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ChoosePicture<span></span></label>
+                                        <input type="file" name="upload">
+                                    </div>
+                                </div>
 
-                        <div class="col-lg-6 col-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Description, new { @class = "control-label" })
-                                @Html.TextAreaFor(m => m.Description)
-                                @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                                <div class="col-lg-6 col-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.Description, new { @class = "control-label" })
+                                        @Html.TextAreaFor(m => m.Description)
+                                        @Html.ValidationMessageFor(m => m.Price, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
 
-                        <div class="col-12">
-                            <div class="form-group button">
-                                <button type="submit" class="btn ">Add product</button>
+                                <div class="col-12">
+                                    <div class="form-group button">
+                                        <button type="submit" class="btn ">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.AddProduct</button>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
 
 
                         }
@@ -94,7 +94,7 @@
                     <div class="single-head">
                         <div class="single-info">
                             <i class="fa fa-phone"></i>
-                            <h4 class="title">Call us Now:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.CallusNow:</h4>
                             <ul>
                                 <li>+212 0608129323</li>
                                 <li>+212 0632493393</li>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="single-info">
                             <i class="fa fa-location-arrow"></i>
-                            <h4 class="title">Our Address:</h4>
+                            <h4 class="title">@E_commerce_ASP.Resources.Views.Home.About.OurAddress:</h4>
                             <ul>
                                 <li>Route Sefrou Fes</li>
                                 <li>Kingdom of Morocco</li>
@@ -122,4 +122,3 @@
         </div>
     </div>
 </section>
-
