--- a/E-commerce-ASP/Views/Proprietaire/Historique.cshtml
+++ b/E-commerce-ASP/Views/Proprietaire/Historique.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<E_commerce_ASP.Models.Historique>
+﻿i@model IEnumerable<E_commerce_ASP.Models.Historique>
 
 @{
     ViewBag.Title = "Historique";
@@ -13,8 +13,8 @@
             <div class="col-12">
                 <div class="bread-inner">
                     <ul class="bread-list">
-                        <li><a href="index1.html">Home<i class="ti-arrow-right"></i></a></li>
-                        <li class="active"><a href="blog-single.html">Historique</a></li>
+                        <li><a href="index1.html">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Home<i class="ti-arrow-right"></i></a></li>
+                        <li class="active"><a href="blog-single.html">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Logs</a></li>
                     </ul>
                 </div>
             </div>
@@ -32,7 +32,7 @@
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Historiques de Votre Produits</h1>
+        <h1 class="mt-4">@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.LogsOfYourProducts</h1>
 
         <div class="card mb-4">
 
@@ -40,26 +40,26 @@
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
-                Historique
+                @E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Logs
             </div>
             <div class="card-body">
                 <table id="datatablesSimple">
                     <thead>
                         <tr>
-                            <th>id Produit</th>
-                            <th>Nom Produit</th>
-                            <th>Owner</th>
-                            <th>Date</th>
-                            <th>Modification</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductId</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductName</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Owner</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Date</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Modificiation</th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
-                            <th>id Produit</th>
-                            <th>Nom Produit</th>
-                            <th>Propretaire</th>
-                            <th>Date</th>
-                            <th>Modification</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductId</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.ProductName</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Owner</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Date</th>
+                            <th>@E_commerce_ASP.Resources.Views.Proprietaire.Proprieataire.Modificiation</th>
                         </tr>
                     </tfoot>
                     <tbody>
